objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Account_Business_Unit_Code__c</fullName>
        <formula>Account.Business_Unit_Code__c</formula>
        <label>Account Business Unit Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Currency__c</fullName>
        <description>Used to populate the currency of the account to the asset level - Loaded through the automated process on a daily basis</description>
        <label>Account Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Products__c</fullName>
        <inlineHelpText>This is for products that are not currently in the Product Catalog.</inlineHelpText>
        <label>Additional Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age_of_Equipment__c</fullName>
        <formula>TODAY() - Date_Shipped__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual number of days since Date Shipped.</inlineHelpText>
        <label>Age of Equipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alive__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>A once every 24 hours indication that the device is working</inlineHelpText>
        <label>Alive</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asset_18_Char_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset 18 Char ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Order__c</fullName>
        <label>Back Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>No Technician</fullName>
                </value>
                <value>
                    <fullName>Case &amp; WO Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Battery_Low__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>The voltage provided by the battery in an Asset Tracking device has fallen below 5% of its original charge.</inlineHelpText>
        <label>Battery Low</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Battery_OK__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>The voltage provided by the battery in an Asset Tracking device has been restored to at least 50% of its original charge.</inlineHelpText>
        <label>Battery OK</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Begin_Speeding__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>The speed is &gt;= the speed threshold for the configured time interval. Default = 65 mph for 30 seconds.</inlineHelpText>
        <label>Begin Speeding</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_City__c</fullName>
        <formula>IF(ISNULL(ERP_Account__c), Account.BillingCity, ERP_Account__r.Billing_City__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Country__c</fullName>
        <formula>IF(ISNULL(ERP_Account__c),Account.BillingCountry, ERP_Account__r.Billing_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Zip__c</fullName>
        <formula>IF(ISNULL(ERP_Account__c),Account.BillingPostalCode, ERP_Account__r.Billing_Zip__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <formula>IF(ISNULL(ERP_Account__c),Account.BillingState, ERP_Account__r.Billing_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billto__c</fullName>
        <formula>IF(ISNULL(ERP_Account__c),Account.Billto__c, ERP_Account__r.BillTo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <description>Milacron Business Group / Machinery Type</description>
        <inlineHelpText>Milacron Business Group / Machinery Type</inlineHelpText>
        <label>Business Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>EXTRUSION</fullName>
                </value>
                <value>
                    <fullName>FERROMATIK</fullName>
                </value>
                <value>
                    <fullName>INJECTION</fullName>
                </value>
                <value>
                    <fullName>SEB AUXILIARY</fullName>
                </value>
                <value>
                    <fullName>SEB MACHINERY</fullName>
                </value>
                <value>
                    <fullName>UNILOY</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Created_for_CCV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create CCV  Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comm_Down__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Wireless modem lost its data connection</inlineHelpText>
        <label>Comm Down</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comm_Up__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Wireless modem is connected to the data network</inlineHelpText>
        <label>Comm Up</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Control_Fanuc_Number__c</fullName>
        <label>Control/Fanuc Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control_Type__c</fullName>
        <label>Control Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <formula>Account.Credit_Status__c</formula>
        <label>Credit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Machine_Alias__c</fullName>
        <description>This is how the customer refers to this machine, e.g. &quot;Press 7&quot; or &quot;The Red One&quot;. It is not the actual Serial Number.</description>
        <inlineHelpText>This is how the customer refers to this machine, e.g. &quot;Press 7&quot; or &quot;The Red One&quot;. It is not the actual Serial Number.</inlineHelpText>
        <label>Customer Machine Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Shipped__c</fullName>
        <description>Date on which this product was shipped to the customer originally</description>
        <inlineHelpText>Date on which this product was shipped to the customer originally</inlineHelpText>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device_ID__c</fullName>
        <inlineHelpText>Also known as ESN number.</inlineHelpText>
        <label>Device ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_Reporting_Order__c</fullName>
        <label>Driver Reporting Order</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Driver</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ERP Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>ERP_Accounts__c.Salesforce_Account__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>ERP_Accounts__c.Address_Type__c</field>
                <operation>equals</operation>
                <value>CS,CX</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ERP_Accounts__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESN__c</fullName>
        <label>ESN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTERNAL_ID__c</fullName>
        <description>Installed Product External ID</description>
        <externalId>true</externalId>
        <inlineHelpText>The External ID must be the same as the Installed Product ID.  For machines and auxiliary equipment use the equipment serial number.  For retrofits to existing machinery use the E1 Lot Serial Number.</inlineHelpText>
        <label>EXTERNAL ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_Speeding__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>The speed is &lt; the speed threshold. Max speed attained and duration of speeding interval are also included.</inlineHelpText>
        <label>End Speeding</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Engine_Hours__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <label>Engine Hours</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Code__c</fullName>
        <label>Family Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Description__c</fullName>
        <label>Family Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Time_Power_On__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Asset tracker battery has powered on; this only happens the first time it is powered on</inlineHelpText>
        <label>First Time Power On</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Frame_Size__c</fullName>
        <label>Frame Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPS_Acquired__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>GPS receiver acquired a fix</inlineHelpText>
        <label>GPS Acquired</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GPS_IMEI__c</fullName>
        <label>GPS IMEI #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPS_Install_Date__c</fullName>
        <label>GPS Install Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GPS_Install_Odometer_Value__c</fullName>
        <label>GPS Install Odometer Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPS_Lost__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>GPS receiver has lost its fix</inlineHelpText>
        <label>GPS Lost</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hard_Braking__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Excessive deceleration</inlineHelpText>
        <label>Hard Braking</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ignition_Off__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Asset ignition is turned off</inlineHelpText>
        <label>Ignition Off</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ignition_On__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Asset ignition is turned on</inlineHelpText>
        <label>Ignition On</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_Motion__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Asset tracker message, asset is in motion</inlineHelpText>
        <label>In Motion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>India_Business_Group__c</fullName>
        <formula>IF(Family_Code__c == &quot;BLOW&quot; &amp;&amp;  Account_Business_Unit_Code__c == &quot;300&quot;,&quot;Blow-Molding&quot;,
IF(Family_Code__c == &quot;EXT&quot; &amp;&amp;  Account_Business_Unit_Code__c == &quot;300&quot;,&quot;Extrusion&quot;,
IF(Account_Business_Unit_Code__c == &quot;300&quot;, CASE(Service_Area_Region__c, &quot;Ahmedabad&quot;, &quot;Domestic&quot;, 
&quot;Kolkata&quot;,&quot;Domestic&quot;,
&quot;Chandigarh&quot;,&quot;Domestic&quot;,
&quot;Delhi&quot;,&quot;Domestic&quot;, 
&quot;Hyderabad&quot;,&quot;Domestic&quot;,
&quot;Bengaluru&quot;,&quot;Domestic&quot;,
&quot;Chennai&quot;,&quot;Domestic&quot;,
&quot;Mumbai&quot;,&quot;Domestic&quot;,
&quot;Pune&quot;,&quot;Domestic&quot;,
&quot;Vapi&quot;,&quot;Domestic&quot;,
&quot;Haridwar&quot;,&quot;Domestic&quot;,
&quot;Export-India&quot;,&quot;Export&quot;,
&quot;&quot;),&quot;&quot;)))</formula>
        <label>India Business Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Notes__c</fullName>
        <description>Any technical information relevant for the service organization. This is normally supplied by field service engineers upon completion of installation</description>
        <inlineHelpText>Any technical information relevant for the service organization. This is normally supplied by field service engineers upon completion of installation</inlineHelpText>
        <label>Installation Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IoT_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IoT Device</label>
        <referenceTo>malive__IoTDevice__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Date_Shipped__c</fullName>
        <description>If this product was shipped multiple times, date of the most recent shipment. Multiple shipments are possible if the product is returned for depot repair or service</description>
        <inlineHelpText>If this product was shipped multiple times, date of the most recent shipment. Multiple shipments are possible if the product is returned for depot repair or service</inlineHelpText>
        <label>Last Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Odometer_Reading__c</fullName>
        <label>Last Odometer Reading</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_ServiceMax_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ServiceMax External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location_Update__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Report on location of asset if no other events have occurred; happens every 2 minutes/15 degree turn</inlineHelpText>
        <label>Location Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Machine_Model__c</fullName>
        <formula>IF( NOT( ISBLANK(Tonnage_Description__c)),Tonnage_Description__c, Product2.Product_Model_Description__c)</formula>
        <label>Machine Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Process__c</fullName>
        <label>Manufacturing Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                    <default>true</default>
                    <label>Plan</label>
                </value>
                <value>
                    <fullName>F Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxSpeedThreshold__c</fullName>
        <label>Max Speed Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milage__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Miles traveled</inlineHelpText>
        <label>Milage</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Code__c</fullName>
        <label>Model Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Description__c</fullName>
        <formula>Product2.Name</formula>
        <label>Model Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Descriptions__c</fullName>
        <label>Model Descriptions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moving__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Asset is moving, &gt;=5MPH for 10 seconds</inlineHelpText>
        <label>Moving</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NextOilChangeDue__c</fullName>
        <label>Next Oil Change Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Event_Location_Update__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Asset tracker message, report on location of asset if no other events have occurred</inlineHelpText>
        <label>No Event Location Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_CCV_Case__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Of CCV Case</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <description>Original Equipment Manufacturer of Non-Milacron Machines.</description>
        <inlineHelpText>Original Equipment Manufacturer of Non-Milacron Machines.</inlineHelpText>
        <label>OEM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AMUT</fullName>
                </value>
                <value>
                    <fullName>ARBURG</fullName>
                </value>
                <value>
                    <fullName>AUTOJECTORS</fullName>
                </value>
                <value>
                    <fullName>AUTOMATED ASSEMBLIES</fullName>
                </value>
                <value>
                    <fullName>BATTENFELD</fullName>
                </value>
                <value>
                    <fullName>BUCHER</fullName>
                </value>
                <value>
                    <fullName>DAVIS STANDARD</fullName>
                </value>
                <value>
                    <fullName>DEMAG</fullName>
                </value>
                <value>
                    <fullName>ENGEL</fullName>
                </value>
                <value>
                    <fullName>FANUC</fullName>
                </value>
                <value>
                    <fullName>FARREL</fullName>
                </value>
                <value>
                    <fullName>FERROMATIK</fullName>
                </value>
                <value>
                    <fullName>HISHIYA</fullName>
                </value>
                <value>
                    <fullName>HPM</fullName>
                </value>
                <value>
                    <fullName>HUSKY</fullName>
                </value>
                <value>
                    <fullName>INGERSOLL-RAND</fullName>
                </value>
                <value>
                    <fullName>JSW</fullName>
                </value>
                <value>
                    <fullName>KLOCHNER WINDSOR</fullName>
                </value>
                <value>
                    <fullName>KRAUSS-MAFFEI</fullName>
                </value>
                <value>
                    <fullName>KRUPP</fullName>
                </value>
                <value>
                    <fullName>LAWTON MOLDING MACHINE</fullName>
                </value>
                <value>
                    <fullName>MEIKI</fullName>
                </value>
                <value>
                    <fullName>NATCO</fullName>
                </value>
                <value>
                    <fullName>NESTAL</fullName>
                </value>
                <value>
                    <fullName>NEWBURY</fullName>
                </value>
                <value>
                    <fullName>NISSEI</fullName>
                </value>
                <value>
                    <fullName>NISSIN</fullName>
                </value>
                <value>
                    <fullName>NOKIA-MAILLEFER</fullName>
                </value>
                <value>
                    <fullName>RAINVILLE</fullName>
                </value>
                <value>
                    <fullName>REED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Odometer__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Vehicle odometer value</inlineHelpText>
        <label>Odometer</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Amount__c</fullName>
        <formula>Account.Open_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Power_On__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Device has powered on</inlineHelpText>
        <label>Power On</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Name of the product associated with the Installed Product</description>
        <formula>Product2.Name</formula>
        <inlineHelpText>Name of the product associated with the Installed Product</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Acceleration__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Excessive acceleration</inlineHelpText>
        <label>Quick Acceleration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <label>Sales Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Ship_Date__c</fullName>
        <description>Scheduled ship date of machine orders.  Currently based on dates from Night Notes.</description>
        <label>Scheduled Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScrewDiameter__c</fullName>
        <label>Screw Diameter</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>Series</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Area_Region__c</fullName>
        <formula>TEXT( Account.Service_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Area/Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Region__c</fullName>
        <description>Service Area / Region identified on the Account</description>
        <inlineHelpText>Service Area / Region identified on the Account</inlineHelpText>
        <label>Service Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCity__c</fullName>
        <formula>IF(ISNULL(ERP_Account__c),Account.ShippingCity, ERP_Account__r.Shipping_City__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCountry__c</fullName>
        <formula>IF(ISNULL(ERP_Account__c),Account.ShippingCountry, ERP_Account__r.Shipping_Country__c)</formula>
        <label>ShipTo Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToState__c</fullName>
        <formula>IF(ISNULL(ERP_Account__c),Account.ShippingState, ERP_Account__r.Shipping_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToStreet__c</fullName>
        <formula>Account.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToZip__c</fullName>
        <formula>IF(ISNULL(ERP_Account__c),Account.ShippingPostalCode, ERP_Account__r.Shipping_Postal_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTo_Account__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShipTo Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipto__c</fullName>
        <formula>IF(ISNULL(ERP_Account__c),Account.Soldto__c, ERP_Account__r.ShipTo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipto_del__c</fullName>
        <label>Ref Shipto#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShotSize__c</fullName>
        <label>Shot Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Warranty_Terms__c</fullName>
        <label>Special Warranty Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>GPS speed</inlineHelpText>
        <label>Speed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Moving__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <label>Start Moving</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stop_Moving__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <label>Stop Moving</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stop__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Register a stop  when vehicle ignition is turned off for time period</inlineHelpText>
        <label>Stop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stopped__c</fullName>
        <description>Service Vehicle Event-Attribute Tracking</description>
        <inlineHelpText>Asset is stopped, &lt;5MPH for 120 seconds</inlineHelpText>
        <label>Stopped</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>TODAY()</formula>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tonnage_Code__c</fullName>
        <label>Tonnage Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tonnage_Description__c</fullName>
        <label>Tonnage Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Installed_Product__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Installed Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Labor_Expire__c</fullName>
        <label>Warranty Labor Expire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Option__c</fullName>
        <description>This is the option code for the Sales Order</description>
        <label>Warranty Option</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Parts_Expire__c</fullName>
        <label>Warranty Parts Expire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Start__c</fullName>
        <label>Warranty Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Status__c</fullName>
        <formula>IF(Warranty_Labor_Expire__c &gt;=  TODAY(), &quot;In Warranty&quot;,&quot;Out of Warranty&quot;)</formula>
        <label>Warranty Status</label>
        <type>Text</type>
    </fields>
</CustomObject>